--- a/inc/css/runpress.css
+++ b/inc/css/runpress.css
@@ -15,9 +15,22 @@
 	}
 }
 
-.tutorial img {
-	height: 16px;
-	width: 16px;
+.tutorialpic_act {
+    max-height: 46px;
+	max-width: 46px;
 	vertical-align: middle;
 	margin-right: 5px;
+	opacity: 1;
+	filter: alpha(opacity=100);
+	color: #000000;
+}
+
+.tutorialpic_pas {
+	max-height: 32px;
+	max-width: 32px;
+	vertical-align: middle;
+	margin-right: 5px;
+	opacity: 0.5;
+	filter: alpha(opacity=50);
+	color: #CCCCCC;
 }
