--- a/inc/css/runpress.css
+++ b/inc/css/runpress.css
@@ -34,3 +34,53 @@
 	filter: alpha(opacity=50);
 	color: #CCCCCC;
 }
+
+/* Tooltip container */
+.tooltip {
+	position: relative;
+	display: inline-block;
+	border-bottom: 0px dotted black;
+}
+
+/* Tooltip text */
+.tooltip .tooltiptext {
+	visibility: hidden;
+	width: 120px;
+	background-color: black;
+	color: #fff;
+	text-align: center;
+	padding: 5px 0;
+	border-radius: 6px;
+	
+	/* Position the tooltip text */
+	position: absolute;
+	z-index: 1;
+	
+	/* Fade in Animation */
+	opacity: 0;
+	transition: opacity 1s;
+	
+	/* Right tooltip */
+	top: 30%;
+	left: 105%;
+}
+
+/* Show the tooltip text when you hover over the tooltip container */
+.tooltip:hover .tooltiptext {
+	visibility: visible;
+	
+	/* Fade in Animation */
+	opacity: 1;
+}
+
+/* Add an arrow to the tooltip */
+.tooltip .tooltiptext::after {
+	content: " ";
+	position: absolute;
+	top: 50%;
+	right: 100%;
+	margin-top: -5px;
+	border-width: 5px;
+	border-style: solid;
+	border-color: transparent black transparent transparent;
+}
